k8s-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bills-service
  labels:
    project: paymax
    app: bills-app
spec:
  replicas: 1
  selector:
    matchLabels:
      project: paymax
      app: bills-app
  template:
    metadata:
      labels:
        project: paymax
        app: bills-app
    spec:
      containers:
      - name: bills-service
        image: registry.digitalocean.com/bills-service/bills:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        
---

apiVersion: v1
kind: Service
metadata:
  name: bills-service
  labels:
    project: paymax
    app: bills-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bills-app
    project: paymax
