k8s-manifest-prod.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: paymax
    app: bills-service
  name: bills-service
  namespace: paymax
spec:
  ports:
    - name: bills-service
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: bills-service
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bills-service-ingress
  namespace: paymax
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bills-service-prod.paymax.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bills-service
            port:
              number: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: paymax
    app: bills-service
  name: bills-service
  namespace: paymax
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bills-service
  template:
    metadata:
      labels:
        project: paymax
        app: bills-service
    spec:
      containers:
        - name: bills-service-nginx
          image: nginx
          ports:
            - containerPort: 8000
              name: nginx
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: bills-service-config-vol
              subPath: default.conf
              readOnly: true
            - name: app-dir
              mountPath: /app/static
        - name: bills-service-app
          image: gcr.io/production-367411/bills-service-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: app
              protocol: TCP
          volumeMounts:
            - name: app-dir
              mountPath: /app/static
          resources: {}
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: app-dir
          emptyDir: {}
        - name: bills-service-config-vol
          configMap:
            name: bills-service-config
            items:
              - key: default.conf
                path: default.conf
